[gd_scene load_steps=11 format=3 uid="uid://4ldyapbufguq"]

[ext_resource type="Script" path="res://Scenes/Reusables/AbstractEnemy/AbstractEnemy.gd" id="1_g4s8k"]
[ext_resource type="AudioStream" uid="uid://c6trnd17f2ccg" path="res://Assets/Audio/SFX/Enemy getting hit.mp3" id="2_211mk"]
[ext_resource type="AudioStream" uid="uid://uvgpsy7ftyi3" path="res://Assets/Audio/SFX/Enemy death.mp3" id="3_4sm7s"]
[ext_resource type="AudioStream" uid="uid://qavyahcp442j" path="res://Assets/Audio/SFX/Enemy attack melle.mp3" id="4_0giee"]
[ext_resource type="Texture2D" uid="uid://boy3f5cjsjujy" path="res://Assets/UI/EnemyHealthBar/0.png" id="5_wn2ju"]
[ext_resource type="Texture2D" uid="uid://wryaj2u0teru" path="res://Assets/UI/EnemyHealthBar/1.png" id="6_kq7u2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jqopd"]
animations = [{
"frames": [],
"loop": true,
"name": &"Attacking",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Running",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hteyl"]
radius = 8.0
height = 20.0

[sub_resource type="SystemFont" id="SystemFont_5d3l4"]
font_names = PackedStringArray("Ubuntu")
font_weight = 450

[sub_resource type="GDScript" id="GDScript_pomaq"]
script/source = "extends Label

func _process(_delta):
	var dummy = get_node(\"..\")
	if dummy.stunned:
		text = \"STUNNED\"
	else:
		text = \"\"
	
"

[node name="AbstractEnemy" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_g4s8k")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jqopd")
animation = &"Attacking"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hteyl")

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = -36.0
offset_right = 9427.0
offset_bottom = 2764.0
scale = Vector2(0.005, 0.005)
theme_override_fonts/font = SubResource("SystemFont_5d3l4")
theme_override_font_sizes/font_size = 2048
text = "STUNNED"
script = SubResource("GDScript_pomaq")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -15.0
offset_top = -26.0
offset_right = 15.0
offset_bottom = 4.0
max_value = 1.0
step = 0.001
value = 1.0
nine_patch_stretch = true
texture_under = ExtResource("6_kq7u2")
texture_progress = ExtResource("5_wn2ju")

[node name="BaseAttackTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="GettingHitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_211mk")
bus = &"EnemiesSFX"

[node name="DyingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4sm7s")
bus = &"EnemiesSFX"

[node name="AttackSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0giee")
bus = &"EnemiesSFX"

[connection signal="timeout" from="BaseAttackTimer" to="." method="_on_base_attack_timer_timeout"]
